# lox-base

./: README.md  main.py  pyproject.toml  pytest.ini
exemplos/: fat.lox  fat_rec.lox  fib.lox  linked_list.lox  luke.lox  math.elox  simple.elox
exercicios/: 01-lex_numeros.py  03-atributos.md  03-eval.md  04-call.md  05-operadores-unários.md  06-operadores-lógicos.md  07-atribuição-de-variáveis copy.md  08-atribuição-de-atributos.md  08-declaração-de-variáveis.md  09-blocos.md  10-if.md  11-while.md  12-for.md  14-escopo.md  15-resolução-de-nomes.md  16-funções-sintaxe.md  17-funções-implementação.md  18-pequenas-diferenças.md  19-validações.md  20-classes-sintaxe.md  21-classes.md  22-instâncias.md  23-this.md  24-init.md  25.super.md  26-pais-específicos.md  desafios.md  lex_numeros.py
lox/: __init__.py  __main__.py  ast.py  cli.py  ctx.py  errors.py  grammar.lark  lox.py  node.py  parser.py  runtime.py  testing.py  transformer.py
tests/: conftest.py  test_01.py  test_01_lex_numeros.py  test_02_lex_strings.py  test_03.py  test_03_attributos.py  test_04.py  test_04_call.py  test_05.py  test_05_operadores_unarios.py  test_06.py  test_06_operadores_lógicos.py  test_07.py  test_07_atribuicao_de_variaveis.py  test_08.py  test_08_atribuicao_de_atributos.py  test_09.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_15.py  test_16.py  test_17.py  test_18.py  test_19.py  test_20.py  test_21.py  test_22.py  test_23.py  test_24.py  test_25.py  test_26.py  test_all.py  test_desafio01.py  test_desafio02.py  test_desafio03.py  test_desafio04.py  (+2 more)
(+21 files in other folders)
